Add styling to personal website

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
         <h1>
         <img src=http://lego.brickinstructions.com/08000/8953/001.jpg>
+           <p></p>
            Why Am I So Cool
         </h1>
         <p>That's a good question</p>
